update package configs

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -17,7 +17,7 @@
 <body class="mat-app-background mat-body" style="padding: 12px;">
     <div style="display: flex; justify-content: center; border-bottom: 1px solid var(--ir-border-color); padding-bottom: 12px;">
         <img src="logo_render_tinyllama.png" alt="Tiny Llama Compressed Logo" style="height: 36px; margin-left: 24px; margin-right: 24px;" />
-        <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">Tiny Llama</p>
+        <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">Tiny Llama</p>
         <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/wiki" style="padding-left: 2%;">Wiki</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/discussions">Discussions</a>
