--- a/web/static/index.html
+++ b/web/static/index.html
@@ -54,7 +54,7 @@
     <hr style="border: 0; border-right: 0px solid var(--ir-border-color);" />
     <span>
         <img src="x-logo.svg" style="height: 10px;" alt="X Logo" />
-        <a class="footer-link" href="https://twitter.com/insightreact" style="margin-left: 0px;">@TinyLlama_IR</a>
+        <a class="footer-link" href="https://twitter.com/TinyLlama_IR" style="margin-left: 0px;">@TinyLlama_IR</a>
     </span>
     <a class="footer-link" href="mailto:support@insightreactions.com">support@insightreactions.com</a>
 </footer>
