fix up mdns, rm font underline, documentation

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#006fee">
     <meta name="msapplication-TileColor" content="#006fee">
     <meta name="theme-color" content="#006fee">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="mat-app-background mat-body" style="padding: 12px;">
@@ -36,7 +37,7 @@
       </div>
       <div class="card-frame fitArticleWidth">
         <img src="stableswarmui.png" style="height: 96px; padding: 12px;"/>
-        <div class="mat-card" style="">
+        <div class="mat-card" >
             <a href="http://:" class="mat-card-title stableswarmui">StableSwarmUI</a>
             <p class="mat-card-content">A Modular Stable Diffusion web-based image generation interface, with an emphasis on making AI powertools easily accessible, performant, and extensible.</p>
         </div>
