--- a/web/static/index.html
+++ b/web/static/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="mat-app-background mat-body" style="padding: 12px;">
+<body class="mat-app-background mat-body" style="padding: 12px; margin-bottom: 77px;">
     <div style="display: flex; justify-content: center; border-bottom: 1px solid var(--ir-border-color); padding-bottom: 12px;">
         <img src="logo_render_tinyllama.png" alt="Tiny Llama Compressed Logo" style="height: 36px; margin-left: 24px; margin-right: 24px;" />
         <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">Tiny Llama</p>
@@ -47,10 +47,10 @@
           document.querySelector('.stableswarmui').href = 'http://' + ipAddress + ':7801';
         </script>
       </div>
+    </div>
 </body>
 
-<footer class="mat-app-background"
-    style="position: absolute; bottom: 0; left:12px; right:12px; padding: 12px; display: flex; align-items: center; gap: 12px; border-top: 1px solid var(--ir-border-color); font-weight: 500;">
+<footer class="mat-app-background" style="position: fixed; bottom: 0; left:12px; right:12px; padding: 12px; display: flex; align-items: center; gap: 12px; border-top: 1px solid var(--ir-border-color); font-weight: 500;">
     &copy; InsightReactions LLC. All rights reserved.
     <hr style="border: 0; border-right: 0px solid var(--ir-border-color);" />
     <span>
