--- a/web/static/index.html
+++ b/web/static/index.html
@@ -12,7 +12,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#006fee">
     <meta name="msapplication-TileColor" content="#006fee">
     <meta name="theme-color" content="#006fee">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1">
 </head>
 
 <body class="mat-app-background mat-body" style="padding: 12px; margin-bottom: 77px;">
