Fix up mobile view

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -16,12 +16,12 @@
 </head>
 
 <body class="mat-app-background mat-body" style="padding: 12px; margin-bottom: 77px;">
-    <div style="display: flex; justify-content: center; border-bottom: 1px solid var(--ir-border-color); padding-bottom: 12px;">
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; border-bottom: 1px solid var(--ir-border-color); padding-bottom: 12px;">
         <img src="logo_render_tinyllama.png" alt="Tiny Llama Compressed Logo" style="height: 36px; margin-left: 24px; margin-right: 24px;" />
         <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">Tiny Llama</p>
         <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/wiki" style="padding-left: 2%;">Wiki</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
-        <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/discussions">Discussions</a>
+        <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/discussions">Discuss</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link" href="https://tinyllama.insightreactions.com">News</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
@@ -29,14 +29,14 @@
     </div>
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2%; gap: 12px;">
       <div class="card-frame fitArticleWidth">
-        <img src="open-webui.png" style="height: 96px; padding: 12px;"/>
+        <img src="open-webui.png" style="height: 64px; padding: 12px; align-self: center;"/>
         <div class="mat-card">
             <a href="http://:" class="mat-card-title openwebui">Open WebUI</a>
             <p class="mat-card-content">Open WebUI is an extensible, feature-rich, and user-friendly self-hosted web-based AI chat interface designed to operate entirely offline. It supports various LLM runners, including Ollama and OpenAI-compatible APIs.</p>
         </div>
       </div>
       <div class="card-frame fitArticleWidth">
-        <img src="stableswarmui.png" style="height: 96px; padding: 12px;"/>
+        <img src="stableswarmui.png" style="height: 64px; padding: 12px; align-self: center;"/>
         <div class="mat-card" >
             <a href="http://:" class="mat-card-title stableswarmui">StableSwarmUI</a>
             <p class="mat-card-content">A Modular Stable Diffusion web-based image generation interface, with an emphasis on making AI powertools easily accessible, performant, and extensible.</p>
@@ -50,7 +50,7 @@
     </div>
 </body>
 
-<footer class="mat-app-background" style="position: fixed; bottom: 0; left:12px; right:12px; padding: 12px; display: flex; align-items: center; gap: 12px; border-top: 1px solid var(--ir-border-color); font-weight: 500;">
+<footer class="mat-app-background" style="position: fixed; bottom: 0; left:12px; right:12px; padding: 12px; display: flex; flex-wrap: wrap; align-items: center; gap: 12px; border-top: 1px solid var(--ir-border-color); font-weight: 500;">
     &copy; InsightReactions LLC. All rights reserved.
     <hr style="border: 0; border-right: 0px solid var(--ir-border-color);" />
     <span>
