--- a/web/static/index.html
+++ b/web/static/index.html
@@ -29,16 +29,16 @@
         <button type="button" class="mat-stroked-button" id="update-button" style="margin-left: 2%; font-weight: 700; cursor: pointer; display: none;" title="Click to upgrade">
           Update
         </button>
-        <div class="card-frame" id="update-modal" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; z-index: 1; padding: 12px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--ir-background-color); box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8); max-height: 80%; overflow-y: auto;">
+        <div class="card-frame fitArticleWidth" id="update-modal" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; z-index: 1; padding: 12px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--ir-background-color); box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8); max-height: 80%; overflow-y: auto;">
           <div></div>
           <div id="upgrade-waiting-container" style="display: none; flex-direction: column; align-items: center;">
             <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
             <h4>Upgrading, please wait...</h4>
             <div></div>
           </div>
-          <div id="upgrade-results-container" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; height: 100%;">
+          <div id="upgrade-results-container" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; width: 100%; height: 100%;">
             <h2>Announcements and Updates</h2>
-            <div id="patchnotes-container" style="padding: 12px; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;"></div>
+            <div id="patchnotes-container" style="padding: 12px; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; width: 100%;"></div>
             <button class="mat-stroked-button" id="close-button" style="background-color: var(--ir-background-color); cursor: pointer; border-radius: 10px; width: 100%; position: sticky; bottom: 12px;">
               Close
             </button>
