add external hyperlink indicator and local tag for clarity

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -18,14 +18,16 @@
 <body class="mat-app-background mat-body" style="padding: 12px; margin-bottom: 77px;">
     <div style="display: flex; flex-wrap: wrap; justify-content: center; border-bottom: 1px solid var(--ir-border-color); padding-bottom: 12px;">
         <img src="logo_render_tinyllama.png" alt="Tiny Llama Compressed Logo" style="height: 36px; margin-left: 24px; margin-right: 24px;" />
-        <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">Tiny Llama</p>
-        <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/wiki" style="padding-left: 2%;">Wiki</a>
+        <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">
+          Tiny Llama<span style="color: gray; font-size: medium; padding-left: 12px;">Local</span>
+        </p>
+        <a class="header-link external" href="https://github.com/InsightReactions/TinyLlama/wiki" target="_blank" style="padding-left: 2%;">Wiki</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
-        <a class="header-link" href="https://github.com/InsightReactions/TinyLlama/discussions">Discuss</a>
+        <a class="header-link external" href="https://github.com/InsightReactions/TinyLlama/discussions" target="_blank">Discuss</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
-        <a class="header-link" href="https://tinyllama.insightreactions.com">News</a>
+        <a class="header-link external" href="https://tinyllama.insightreactions.com" target="_blank">News</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
-        <a class="header-link" href="https://tinyllama.insightreactions.com">About</a>
+        <a class="header-link external" href="https://insightreactions.com/about" target="_blank">About</a>
         <button type="button" class="mat-stroked-button" id="update-button" style="margin-left: 2%; font-weight: 700; cursor: pointer; display: none;" title="Click to upgrade">
           Update
         </button>
