--- a/web/static/index.html
+++ b/web/static/index.html
@@ -21,11 +21,11 @@
         <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">
           Tiny Llama<span style="color: gray; font-size: medium; padding-left: 12px;">Local</span>
         </p>
-        <a class="header-link external" href="https://github.com/InsightReactions/TinyLlama/wiki" target="_blank" style="padding-left: 2%;">Wiki</a>
-        <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
-        <a class="header-link external" href="https://github.com/InsightReactions/TinyLlama/discussions" target="_blank">Discuss</a>
+        <a class="header-link external" href="https://tinyllama.insightreactions.com/guides" target="_blank" style="padding-left: 2%;">Guides</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link external" href="https://tinyllama.insightreactions.com" target="_blank">News</a>
+        <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
+        <a class="header-link external" href="https://github.com/InsightReactions/TinyLlama/discussions" target="_blank">Discuss</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link external" href="https://insightreactions.com/about" target="_blank">About</a>
         <button type="button" class="mat-stroked-button" id="update-button" style="margin-left: 2%; font-weight: 700; cursor: pointer; display: none;" title="Click to upgrade">
@@ -49,6 +49,8 @@
         </div>
     </div>
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2%; gap: 12px;">
+      <h1>Generative AI Services</h1>
+      <p style="color: gray; font-style: italic;">Click on a title below to navigate to each respective service.</p>
       <div class="card-frame fitArticleWidth">
         <img src="open-webui.png" style="height: 64px; padding: 12px; align-self: center;"/>
         <div class="mat-card">
@@ -59,7 +61,7 @@
       <div class="card-frame fitArticleWidth">
         <img src="stableswarmui.png" style="height: 64px; padding: 12px; align-self: center;"/>
         <div class="mat-card" >
-            <a href="http://:" class="mat-card-title stableswarmui">StableSwarmUI</a>
+            <a href="http://:" class="mat-card-title stableswarmui">SwarmUI</a>
             <p class="mat-card-content">A Modular Stable Diffusion web-based image generation interface, with an emphasis on making AI powertools easily accessible, performant, and extensible.</p>
         </div>
       </div>
