--- a/web/static/index.html
+++ b/web/static/index.html
@@ -59,9 +59,9 @@
         </div>
       </div>
       <div class="card-frame fitArticleWidth">
-        <img src="stableswarmui.png" style="height: 64px; padding: 12px; align-self: center;"/>
+        <img src="swarmui.png" style="height: 64px; padding: 12px; align-self: center;"/>
         <div class="mat-card" >
-            <a href="http://:" class="mat-card-title stableswarmui">SwarmUI</a>
+            <a href="http://:" class="mat-card-title swarmui">SwarmUI</a>
             <p class="mat-card-content">A Modular Stable Diffusion web-based image generation interface, with an emphasis on making AI powertools easily accessible, performant, and extensible.</p>
         </div>
       </div>
