--- a/web/static/index.html
+++ b/web/static/index.html
@@ -28,7 +28,7 @@
         <a class="header-link external" href="https://github.com/InsightReactions/TinyLlama/discussions" target="_blank">Discuss</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link external" href="https://insightreactions.com/about" target="_blank">About</a>
-        <button type="button" class="mat-stroked-button" id="update-button" style="margin-left: 2%; font-weight: 700; cursor: pointer; display: none;" title="Click to upgrade">
+        <button type="button" class="mat-raised-button" id="update-button" style="margin-left: 7%; font-weight: 700; cursor: pointer; display: none; color: var(--ir-primary-color);" title="Click to upgrade">
           Update
         </button>
         <div class="card-frame fitArticleWidth" id="update-modal" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; z-index: 1; padding: 12px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--ir-background-color); box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8); max-height: 80%; overflow-y: auto;">
@@ -41,12 +41,12 @@
           <div id="upgrade-results-container" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; width: 100%; height: 100%;">
             <h2>Announcements and Updates</h2>
             <div id="patchnotes-container" style="padding: 12px; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; width: 100%;"></div>
-            <button class="mat-stroked-button" id="close-button" style="background-color: var(--ir-background-color); cursor: pointer; border-radius: 10px; width: 100%; position: sticky; bottom: 12px;">
+            <button class="mat-raised-button" id="close-button" style="background-color: var(--ir-background-color); cursor: pointer; border-radius: 10px; width: 100%; position: sticky; bottom: 12px;">
               Close
             </button>
           </div>
           <div></div>
-        </div>
+        </div> 
     </div>
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 2%; gap: 12px;">
       <h1 id="page-title">Generative AI Services</h1>
