--- a/web/static/index.html
+++ b/web/static/index.html
@@ -21,6 +21,8 @@
         <p style="color: #006fee; margin-right: 5%; font-weight: 700; font-size: x-large; margin-bottom: 0; align-content: center; text-align: center; align-self: center;">
           Tiny Llama<span style="color: gray; font-size: medium; padding-left: 12px;">Local</span>
         </p>
+        <a class="header-link external" href="https://insightreactions.com/store" target="_blank" style="padding-left: 2%;">Store</a>
+        <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link external" href="https://tinyllama.insightreactions.com/guides" target="_blank" style="padding-left: 2%;">Guides</a>
         <div style="border: 0; border-right: 1px solid var(--ir-border-color); margin-left: 2%; margin-right: 2%;"></div>
         <a class="header-link external" href="https://tinyllama.insightreactions.com" target="_blank">News</a>
