--- a/web/static/index.html
+++ b/web/static/index.html
@@ -33,7 +33,7 @@
         <button type="button" class="mat-raised-button" id="update-button" style="margin-left: 7%; font-weight: 700; cursor: pointer; display: none; color: var(--ir-primary-color);" title="Click to upgrade">
           Update
         </button>
-        <div class="card-frame fitArticleWidth" id="update-modal" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; z-index: 1; padding: 12px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--ir-background-color); box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8); max-height: 80%; overflow-y: auto;">
+        <div class="fitArticleWidth modal" id="update-modal" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; z-index: 1; padding: 12px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--ir-background-color); box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8); max-height: 80%; overflow-y: auto;">
           <div></div>
           <div id="upgrade-waiting-container" style="display: none; flex-direction: column; align-items: center;">
             <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
