--- a/web/static/index.html
+++ b/web/static/index.html
@@ -43,7 +43,7 @@
           <div id="upgrade-results-container" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; width: 100%; height: 100%;">
             <h2>Announcements and Updates</h2>
             <div id="patchnotes-container" style="padding: 12px; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; width: 100%;"></div>
-            <button class="mat-raised-button" id="close-button" style="background-color: var(--ir-background-color); cursor: pointer; border-radius: 10px; width: 100%; position: sticky; bottom: 12px;">
+            <button type="button" class="mat-raised-button" id="close-button" style="background-color: var(--ir-background-color); cursor: pointer; border-radius: 10px; width: 100%; position: sticky; bottom: 12px;">
               Close
             </button>
           </div>
@@ -55,7 +55,10 @@
       <p style="color: gray; font-style: italic;" id="page-description">Click on a title below to navigate to each respective service.</p>
       <div class="fitArticleWidth" style="display: flex; justify-content: center; align-content: center; align-items: center; gap: 12px;">
         <label for="vram-progress-bar" style="color: gray;">VRAM Usage</label>
-        <progress style="width: 79%;" id="vram-progress-bar" value="0" max="100"></progress>
+        <progress style="width: 72%;" id="vram-progress-bar" value="0" max="100"></progress>
+        <button type="button" class="mat-raised-button small-button" id="reclaim-vram-button" title="Forcefully reclaim VRAM from services. WARNING: May result in loss of unsaved data.">
+          <img src="square-chevrons-left.svg" style="width: 24px; height: 24px;" alt="Reclaim VRAM">
+        </button>
       </div>
       <div id="plugin-browser" class="fitArticleWidth" style="display: flex; flex-flow: wrap; flex-direction: row; align-items: center; justify-content: center; gap: 12px;">
       </div>
