add untested upgrade status line

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -37,7 +37,7 @@
           <div></div>
           <div id="upgrade-waiting-container" style="display: none; flex-direction: column; align-items: center;">
             <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-            <h4>Upgrading, please wait...</h4>
+            <h4 id="upgrade-status">Upgrading, please wait...</h4>
             <div></div>
           </div>
           <div id="upgrade-results-container" style="display: none; flex-direction: column; justify-content: space-between; align-items: center; width: 100%; height: 100%;">
